[package]
name = "fftvsdp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"
transpose = "0.2.1"
rand = "0.8.4"
rand_pcg = "0.3.1"
approx = "0.5.0"
itertools = "0.10.1"
rayon = "1.5.1"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "acm"
harness = false
